Sun, 21 Sep 2014 13:41:30 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.54 release.

   *  Numerous patches to attempt to get Python 3 working, but
      tests are still failing under Python 3, so this code is not ready
      yet.

   *  MemcachedKeyCharacterError better describes key problem.
      Suggested by Roy Smith

   *  Added touch(), patch by erankor on github.

   *  Allow empty server list, patch by zewt on github.

   *  If unknown flags in get request, raises a value error rather than the
      code bombing out.

   *  Setting the SERVER_MAX_* values after import did not work, despite
      being documented to.  Reported by alexf101 on github.

Sun, 07 Jun 2013 11:12:18 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.53 release.

   *  Fixing set_multi() so that if the server closes the connection
      it will no longer raise AttributeError.  Issue found and resolution
      reviewed by Ben Hoyt.

   *  readline() now will mark the connection dead if the read fails.
      It was just closing it before.  This is related to the set_multi()
      change but worth noting separately.  Thanks to Ben Hoyt.

   *  Discussion of the above:
      https://github.com/linsomniac/python-memcached/commit/b7054a964aed0e6d86e853e60aab09cd0183b9f6#commitcomment-3337557

Sun, 02 Jun 2013 01:08:26 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.52 release.

   *  Changing check_keys to use re.match() instead of str.translate(),
      because re.match() works with Python < 2.6.
      Found by Giovanni Di Milia.

Mon, 06 May 2013 15:29:07 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.51 release.

   *  Add a MANIFEST.in file, patch by Daniel Widerin.

Mon, 06 May 2013 07:20:21 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.50 release.

   *  Client() now takes a "check_keys" option, which defaults to True.
      If False, it disables the checking of keys to ensure they have
      acceptable size and are composed of non-control characters.