@@ -1,3 +1,5 @@
+   *  Allowing empty key in _multi() calls.  Suggested by sergio97 on github.
+
 Sun, 21 Sep 2014 13:41:30 -0600  Sean Reifschneider  <jafo@tummy.com>
 
    *  1.54 release.
